fixed z-index menu

--- a/app/scss/blocks/hamburger-menu.scss
+++ b/app/scss/blocks/hamburger-menu.scss
@@ -16,6 +16,6 @@
 		right: 0;
 		bottom: 0;
 		top: 0;
-		z-index: 20;
+		z-index: 1;
 	}
 }
